; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_merge-tree.c_both_empty.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_merge-tree.c_both_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.name_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.name_entry*, %struct.name_entry*)* @both_empty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @both_empty(%struct.name_entry* %0, %struct.name_entry* %1) #0 {
  %3 = alloca %struct.name_entry*, align 8
  %4 = alloca %struct.name_entry*, align 8
  store %struct.name_entry* %0, %struct.name_entry** %3, align 8
  store %struct.name_entry* %1, %struct.name_entry** %4, align 8
  %5 = load %struct.name_entry*, %struct.name_entry** %3, align 8
  %6 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %5, i32 0, i32 0
  %7 = call i64 @is_null_oid(i32* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load %struct.name_entry*, %struct.name_entry** %4, align 8
  %11 = getelementptr inbounds %struct.name_entry, %struct.name_entry* %10, i32 0, i32 0
  %12 = call i64 @is_null_oid(i32* %11)
  %13 = icmp ne i64 %12, 0
  br label %14

14:                                               ; preds = %9, %2
  %15 = phi i1 [ false, %2 ], [ %13, %9 ]
  %16 = zext i1 %15 to i32
  ret i32 %16
}

declare dso_local i64 @is_null_oid(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
